<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color_1"
    android:backgroundTint="@color/primary_color_3"
    tools:context=".ItemTypeUI">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color_3"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="12dp"
            android:background="@color/primary_color_2"
            android:text="@string/select_item_type"
            android:textAlignment="center"
            android:textColor="@color/accent_color_4"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/document"
            android:textColor="@color/accent_color_4" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/food"
            android:textColor="@color/accent_color_4" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/groceries"
            android:textColor="@color/accent_color_4" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/business_supplies"
            android:textColor="@color/accent_color_4" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/clothes"
            android:textColor="@color/accent_color_4" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/household_goods"
            android:textColor="@color/accent_color_4" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/electronic"
            android:textColor="@color/accent_color_4" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/sport_goods"
            android:textColor="@color/accent_color_4" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_1"
            android:text="@string/other"
            android:textColor="@color/accent_color_4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_color_3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="12dp">

        <!-- ImageButton for Home -->
        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_1"
            android:contentDescription="@string/home_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/home" />

        <!-- ImageButton for Activity -->
        <ImageButton
            android:id="@+id/btnActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/activity_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/activity" />

        <!-- ImageButton for Notification -->
        <ImageButton
            android:id="@+id/btnNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/notification_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/notification" />


        <!-- ImageButton for Profile -->
        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/profile_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/profile" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="@color/accent_color_2"
        android:text="@string/button"
        android:textColor="@color/accent_color_4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>