<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color_3"
    android:textAlignment="center"
    tools:context=".ProfileUI">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="351dp"
        android:layout_height="484dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/profileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@color/accent_color_5"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_info"
            android:textColor="@color/accent_color_4"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_horizontal|fill_vertical"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo1"
                app:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/text00"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/secondary_color_3"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_horizontal|fill_vertical"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo2"
                app:srcCompat="@drawable/email" />

            <TextView
                android:id="@+id/text01"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/secondary_color_3"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_horizontal|fill_vertical"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo3"
                app:srcCompat="@drawable/phone" />

            <TextView
                android:id="@+id/text02"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mobile"
                android:textColor="@color/secondary_color_3"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_horizontal|fill_vertical"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo4"
                app:srcCompat="@drawable/birthday" />

            <TextView
                android:id="@+id/text03"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/birthday"
                android:textColor="@color/secondary_color_3"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_horizontal|fill_vertical"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo5"
                app:srcCompat="@drawable/gender" />

            <TextView
                android:id="@+id/text04"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="@color/secondary_color_3"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/man04dsc"
            app:srcCompat="@drawable/man04" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_color_3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- ImageButton for Home -->
        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/home_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/home" />

        <!-- ImageButton for Activity -->
        <ImageButton
            android:id="@+id/btnActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/activity_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/activity" />

        <!-- ImageButton for Notification -->
        <ImageButton
            android:id="@+id/btnNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/notification_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/notification" />


        <!-- ImageButton for Profile -->
        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_1"
            android:contentDescription="@string/profile_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/profile" />

    </LinearLayout>

    <Button
        android:id="@+id/btnlogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/accent_color_2"
        android:text="@string/logout"
        android:textColor="@color/accent_color_4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>