<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color_3"
    tools:context=".ActivityUI">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="351dp"
        android:layout_height="484dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/profileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_activities"
            android:textAlignment="center"
            android:textColor="@color/accent_color_5"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/man02dsc"
            app:srcCompat="@drawable/man02" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_color_3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- ImageButton for Home -->
        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/home_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/home" />

        <!-- ImageButton for Activity -->
        <ImageButton
            android:id="@+id/btnActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/activity_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/activity" />

        <!-- ImageButton for Notification -->
        <ImageButton
            android:id="@+id/btnNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_1"
            android:contentDescription="@string/notification_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/notification" />


        <!-- ImageButton for Profile -->
        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_color_2"
            android:contentDescription="@string/profile_button_description"
            android:padding="12dp"
            app:srcCompat="@drawable/profile" />

    </LinearLayout>
    <!-- Modify -->
</androidx.constraintlayout.widget.ConstraintLayout>